--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <title>interact type test</title>
    <link rel="stylesheet" href="reset.css">
    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="typography.css">
 </head>
 <body>
 
