--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>interact type test</title>
-   <link rel="stylesheet" href="reset.css">
-   <link rel="stylesheet" href="typography.css">
+   <link rel="stylesheet" href="resources/reset.css">
+   <link rel="stylesheet" href="resources/typography.css">
    <link rel="stylesheet" href="style.css">
 
 </head>
@@ -17,7 +17,7 @@
    <nav>
       <div class="nav-block container-flex">
          <div class="logo container">
-            <img src="logo.svg" alt="logo">
+            <img src="images/logo.svg" alt="logo">
          </div>
       </div>
    </nav>
@@ -47,6 +47,7 @@
          </div>
    </div>
 
-   <script src="script.js"></script>
+   <!-- Please don't delete me I'm the reason everything works -->
+   <script src="resources/script.js"></script>
 </body>
 </html>
