--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          </div>
 
          <div class="disclaimer">
-            <p class="body-chart">
+            <p class="body-small">
             &#42;Our maintenance plan with remote assistance keeps your products in top shape. No nasty surprises or repair and replacement costs.
             </p>
          </div>
