--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <p class="body-small">
             &#42;Our maintenance plan with remote assistance keeps your products in top shape. No nasty surprises or repair and replacement costs.
             </p>
+            <p class="body-x-small">
+            &#42;Our maintenance plan with remote assistance keeps your products in top shape. No nasty surprises or repair and replacement costs.
+            </p>
          </div>
    </div>
 
