styling for panel complete

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>interact type test</title>
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
-   <link rel="stylesheet" href="resources/typography.css">
+   <link rel="stylesheet" href="resources/control-panel.css">
    <link rel="stylesheet" href="style.css">
 
 </head>
@@ -36,6 +37,9 @@
             <h2 class="h2">Squeeze every last drop out
             of your lighting investment
             </h2>
+            <h2 class="h2">Squeeze every last drop out
+            of your lighting investment
+         </h2>
 
             <p class="h4">Our maintenance plan with remote assistance keeps your products in top shape. No nasty surprises or repair and replacement costs*.</p>
          </div>
@@ -49,6 +53,51 @@
             </p>
          </div>
    </div>
+
+
+<!-- Control panel -->
+
+   <section class="control-panel">
+      <div class="cp-background">
+
+         <div class="cp-button">
+            <img src="" alt="button">
+         </div>
+         <!-- Type -->
+         <h1>Control panel</h1>
+         <p>Welcome to your new browser based playground, experiment with the below variables to everything is just right.</p>
+
+         <div class="cp-panel">
+            <div class="cp-form-block">
+
+               <hr>
+               <h4>Base type size</h4>
+
+               <div class="cp-form">
+                  <!-- labels -->
+                  <div>
+                     <p>small</p>
+                     <p>medium</p>
+                     <p>large</p>
+                     <p>x-large</p>
+                  </div>
+                  <!-- inputs -->
+                  <div class="cp-input-block">
+                     <input type="text" name="b-type-small" value="16px">
+                     <input type="text" name="b-type-small" value="16px">
+                     <input type="text" name="b-type-small" value="16px">
+                     <input type="text" name="b-type-small" value="16px">
+
+                  </div>
+               </div>
+
+            </div>
+
+            </div>
+         </div>
+
+      </div>
+   </section>
 
    <!-- Please don't delete me I'm the reason everything works -->
    <script src="resources/script.js"></script>
