--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>interact type test</title>
-   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="resources/control-panel.css">
    <link rel="stylesheet" href="style.css">
@@ -37,9 +37,6 @@
             <h2 class="h2">Squeeze every last drop out
             of your lighting investment
             </h2>
-            <h2 class="h2">Squeeze every last drop out
-            of your lighting investment
-         </h2>
 
             <p class="h4">Our maintenance plan with remote assistance keeps your products in top shape. No nasty surprises or repair and replacement costs*.</p>
          </div>
@@ -71,7 +68,9 @@
 
          <!-- Type -->
          <h1>Control panel</h1>
-         <p>Welcome to your new browser based playground. Experiment with the below variables until Lekker.</p>
+         <p>Welcome to your new browser based playground. Experiment with the below variables until Lekker.
+         </p><br>
+         <p class="emphasis">IMPORTANT: Do not use units in the fields (all measurements are in 'px')</p>
 
          <div class="cp-panel">
 
@@ -88,10 +87,10 @@
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input type="text" name="b-type-small" value="16px">
-                     <input type="text" name="b-type-small" value="16px">
-                     <input type="text" name="b-type-small" value="16px">
-                     <input type="text" name="b-type-small" value="16px">
+                     <input id="base-type-s" type="text" name="b-type-small" value="16">
+                     <input id="base-type-m" type="text" name="b-type-small" value="16">
+                     <input id="base-type-l" type="text" name="b-type-small" value="16">
+                     <input id="base-type-xl" type="text" name="b-type-small" value="16">
                   </div>
                </div>
             </div>
@@ -127,7 +126,7 @@
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input type="text" name="b-type-small" value="12px">
+                     <input type="text" name="b-type-small" value="12">
                   </div>
                </div>
             </div>
