--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
-   <title>interact type test</title>
+   <title>TypeCraft</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
    <link rel="stylesheet" href="resources/reset.css">
    <link rel="stylesheet" href="resources/control-panel.css">
