--- a/index.html
+++ b/index.html
@@ -15,37 +15,28 @@
 
    <!-- Nav -->
 
-   <nav>
-      <div class="nav-block container-flex">
-         <div class="logo container">
-            <img src="images/logo.svg" alt="logo">
-         </div>
-      </div>
-   </nav>
-
 
    <!-- Type block -->
 
    <div class="container">
 
-      <div class="container-flex type-block">
-         <div class="main-text">
+         <div class="wrapper">
             <div class="bread-crumb">
                <span>/Typographic demonstration 0.1</span>
             </div>
-            <h1 class="hero">Are you <strong>read</strong>y<strong>?</strong></h1>
-            <h2 class="h2">Squeeze every last drop out
-            of your lighting investment
-            </h2>
 
-            <p class="h4">Our maintenance plan with remote assistance keeps your products in top shape. No nasty surprises or repair and replacement costs*.</p>
+            <div class="type-container">
+               </div>
+               <p class="hero">A short title is better</p>
+               <p class="h1">A short title is better</p>
+               <p class="h2">A short title is better</p>
+               <p class="h3">A short title is better</p>
+               <p class="h4">A short title is better</p>
+               <p class="body">A short title is better</p>
+               <p class="body-small">A short title is better</p>
+               <p class="body-x-small">A short title is better</p>
+            </div>
 
-         </div>
-
-         <div class="disclaimer">
-            <p class="body-x-small">
-            &#42;Our maintenance plan with remote assistance keeps your products in top shape. No nasty surprises or repair and replacement costs.
-            </p>
          </div>
    </div>
 
