nearly everything working — just need fonts to load correctly

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
    <div class="container">
 
-         <div class="wrapper">
+         <div class="type-wrapper">
             <div class="bread-crumb">
                <span>/Typographic demonstration 0.1</span>
             </div>
@@ -48,18 +48,17 @@
 
          <!-- Button -->
          <div class="cp-button" id="cp-button-on">
-            <img src="images/carot.svg" alt="button">
-         </div>
-
-         <div class="cp-button" id="cp-button-off">
             <img src="images/carot-reverse.svg" alt="button">
          </div>
 
+         <div class="cp-button" id="cp-button-off">
+            <img src="images/carot.svg" alt="button">
+         </div>
+
          <!-- Type -->
-         <h1>Control panel</h1>
+         <h1>TypeCraft</h1>
          <p>Welcome to your new browser based playground. Experiment with the below variables until Lekker.
-         </p><br>
-         <p class="emphasis">IMPORTANT: Do not use units in the fields (all measurements are in px)</p>
+
 
          <div class="cp-panel">
 
