--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
          </div>
 
          <!-- Type -->
-         <h1>TypeCraft</h1>
+         <h1>TypeCraft
+         <br>&#8212;</h1>
          <p>Welcome to your new browser based playground. Experiment with the below variables until Lekker.
 
 
