--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
          <div class="type-wrapper">
             <div class="bread-crumb">
-               <span>/Typographic demonstration 0.1</span>
+               <span>/TypeCraft Demo 0.1</span>
             </div>
 
             <div class="type-container">
