--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
          <!-- Type -->
          <h1>TypeCraft
          <br>&#8212;</h1>
-         <p>Welcome to your new browser based playground. Experiment with the below variables until Lekker.
+         <p>Welcome to your new browser based playground. Experiment with the below variables until all is lekker.
 
 
          <div class="cp-panel">
@@ -107,7 +107,7 @@
 
             <div class="cp-form-block">
                <hr>
-               <h4>Min type size</h4>
+               <h4>Minimum type size</h4>
                <div class="cp-form">
                   <!-- labels -->
                   <div>
