enabled vertical scrolling in panel

--- a/index.html
+++ b/index.html
@@ -50,19 +50,18 @@
          <div class="cp-button" id="cp-button-on">
             <img src="images/carot-reverse.svg" alt="button">
          </div>
-
          <div class="cp-button" id="cp-button-off">
             <img src="images/carot.svg" alt="button">
          </div>
 
-         <!-- Type -->
-         <h1>TypeCraft
-         <br>&#8212;</h1>
-         <p>Welcome to your new browser based playground. Experiment with the below variables until all is lekker.
-
-
          <div class="cp-panel">
 
+            <!-- Intro -->
+            <h1>TypeCraft
+            <br>&#8212;</h1>
+            <p>Welcome to your new browser based playground. Experiment with the below variables until all is lekker.
+
+            <!-- Functionality -->
             <div class="cp-form-block">
                <hr>
                <h4>Base type size</h4>
