added body big and fixed calcualtion flaw

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                      <p>h2</p>
                      <p>h3</p>
                      <p>h4</p>
+                     <p>body-big</p>
                      <p>body</p>
                      <p>body-small</p>
                      <p>body-x-small</p>
@@ -141,6 +142,7 @@
                      <output id="h2-final" name="x"></output>
                      <output id="h3-final" name="x"></output>
                      <output id="h4-final" name="x"></output>
+                     <output id="body-b-final" name="x"></output>
                      <output id="body-final" name="x"></output>
                      <output id="body-s-final" name="x"></output>
                      <output id="body-xs-final" name="x"></output>
