fixed the missing step

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                <p class="h2">A short title is better</p>
                <p class="h3">A short title is better</p>
                <p class="h4">A short title is better</p>
+               <p class="body-big">A short title is better</p>
                <p class="body">A short title is better</p>
                <p class="body-small">A short title is better</p>
                <p class="body-x-small">A short title is better</p>
