--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- Functionality -->
             <div class="cp-form-block">
-               <hr>
+               <hr class="cp-hr">
                <h4>Base type size</h4>
                <div class="cp-form">
                   <!-- labels -->
