--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
 
             <div class="cp-form-block">
-               <hr>
+               <hr class="cp-hr">
                <h4>Type scale</h4>
                <div class="cp-form">
                   <!-- labels -->
@@ -106,7 +106,7 @@
             </div>
 
             <div class="cp-form-block">
-               <hr>
+               <hr class="cp-hr">
                <h4>Minimum type size</h4>
                <div class="cp-form">
                   <!-- labels -->
@@ -121,7 +121,7 @@
             </div>
 
             <div class="cp-form-block">
-               <hr>
+               <hr class="cp-hr">
                <h4>Final pixel sizes</h4>
                <div class="cp-form">
                   <!-- labels -->
