break-point device working — just need to add visual changes to the icons and add highlighting

--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
             <br>&#8212;</h1>
             <p>Welcome to your new browser based playground. Experiment with the below variables until all is lekker.
 
+            <!-- Breakpoints -->
+            <div class="cp-form-block">
+               <hr class="cp-hr">
+               <h4 class="break-title">Break points</h4>
+               <div class="cp-break-wrapper">
+                  <!-- inputs -->
+                  <!-- <span>0</span> -->
+                  <img src="images/icon-phone.svg" alt="icon">
+                  <input id="break-one" type="text" name="b-type-small" value="x">
+                  <img src="images/icon-tablet.svg" alt="icon">
+                  <input id="break-two" type="text" name="b-type-small" value="x">
+                  <img src="images/icon-laptop.svg" alt="icon">
+                  <input id="break-three" type="text" name="b-type-small" value="x">
+                  <img src="images/icon-desktop.svg" alt="icon">
+
+
+               </div>
+            </div>
+
             <!-- Functionality -->
             <div class="cp-form-block">
                <hr class="cp-hr">
