--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 <body>
 
 
+   <!-- Break points -->
+   <div id="break-bg">
+      <div id="break-mark-1"></div>
+      <div id="break-mark-2"></div>
+      <div id="break-mark-3"></div>
+      <div id="break-mark-4"></div>
+   </div>
+
+
    <!-- Nav -->
 
 
@@ -69,14 +78,19 @@
                <div class="cp-break-wrapper">
                   <!-- inputs -->
                   <!-- <span>0</span> -->
-                  <img src="images/icon-phone.svg" alt="icon">
+                  <img src="images/icon-phone-red.svg" alt="icon">
                   <input id="break-one" type="text" name="b-type-small" value="x">
-                  <img src="images/icon-tablet.svg" alt="icon">
+                  <!-- <img src="images/icon-tablet.svg" alt="icon"> -->
+                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                    <title>type-craft-icons</title>
+                    <path fill="#222" d="M33.32,11.08V38.92H16.68V11.08H33.32m0-5.12H16.68a5.12,5.12,0,0,0-5.12,5.12V38.92a5.12,5.12,0,0,0,5.12,5.12H33.32a5.12,5.12,0,0,0,5.12-5.12V11.08a5.12,5.12,0,0,0-5.12-5.12Z"/>
+                  </svg>
+
                   <input id="break-two" type="text" name="b-type-small" value="x">
                   <img src="images/icon-laptop.svg" alt="icon">
                   <input id="break-three" type="text" name="b-type-small" value="x">
                   <img src="images/icon-desktop.svg" alt="icon">
-
+                  <!-- <input id="break-four" type="text" name="b-type-small" -->
 
                </div>
             </div>
