type rounding & small type size limiting added

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="base-type-s" type="text" name="b-type-small" value="16">
-                     <input id="base-type-m" type="text" name="b-type-small" value="16">
-                     <input id="base-type-l" type="text" name="b-type-small" value="16">
-                     <input id="base-type-xl" type="text" name="b-type-small" value="16">
+                     <input id="base-type-s" type="text" name="b-type-small" value="x">
+                     <input id="base-type-m" type="text" name="b-type-small" value="x">
+                     <input id="base-type-l" type="text" name="b-type-small" value="x">
+                     <input id="base-type-xl" type="text" name="b-type-small" value="x">
                   </div>
                </div>
             </div>
@@ -130,25 +130,29 @@
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="base-scale-s" type="text" name="b-type-small" value="1.18">
-                     <input id="base-scale-m" type="text" name="b-type-small" value="1.25">
-                     <input id="base-scale-l" type="text" name="b-type-small" value="1.333">
-                     <input id="base-scale-xl" type="text" name="b-type-small" value="1.418">
+                     <input id="base-scale-s" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-m" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-l" type="text" name="b-type-small" value="x">
+                     <input id="base-scale-xl" type="text" name="b-type-small" value="x">
                   </div>
                </div>
             </div>
 
             <div class="cp-form-block">
                <hr class="cp-hr">
-               <h4>Minimum type size</h4>
+               <h4>Limits</h4>
                <div class="cp-form">
                   <!-- labels -->
                   <div>
-                     <p>limit</p>
+                     <p>minimum size</p>
+                     <p>body-small max</p>
+                     <p>body-x-small max</p>
                   </div>
                   <!-- inputs -->
                   <div class="cp-input-block">
-                     <input id="min-type" type="text" name="b-type-small" value="12">
+                     <input id="min-type" type="text" name="b-type-small" value="x">
+                     <input id="max-type-small" type="text" name="b-type-small" value="x">
+                     <input id="max-type-x-small" type="text" name="b-type-small" value="x">
                   </div>
                </div>
             </div>
