--- a/index.html
+++ b/index.html
@@ -76,21 +76,34 @@
                <hr class="cp-hr">
                <h4 class="break-title">Break points</h4>
                <div class="cp-break-wrapper">
+
                   <!-- inputs -->
-                  <!-- <span>0</span> -->
-                  <img src="images/icon-phone-red.svg" alt="icon">
                   <input id="break-one" type="text" name="b-type-small" value="x">
-                  <!-- <img src="images/icon-tablet.svg" alt="icon"> -->
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>type-craft-icons</title>
+                    <title>phone-icon</title>
                     <path fill="#222" d="M33.32,11.08V38.92H16.68V11.08H33.32m0-5.12H16.68a5.12,5.12,0,0,0-5.12,5.12V38.92a5.12,5.12,0,0,0,5.12,5.12H33.32a5.12,5.12,0,0,0,5.12-5.12V11.08a5.12,5.12,0,0,0-5.12-5.12Z"/>
                   </svg>
 
                   <input id="break-two" type="text" name="b-type-small" value="x">
-                  <img src="images/icon-laptop.svg" alt="icon">
+                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                    <title>tablet-icon</title>
+                    <path fill="#222" d="M33.32,11.08V38.92H16.68V11.08H33.32m0-5.12H16.68a5.12,5.12,0,0,0-5.12,5.12V38.92a5.12,5.12,0,0,0,5.12,5.12H33.32a5.12,5.12,0,0,0,5.12-5.12V11.08a5.12,5.12,0,0,0-5.12-5.12Z"/>
+                  </svg>
+
                   <input id="break-three" type="text" name="b-type-small" value="x">
-                  <img src="images/icon-desktop.svg" alt="icon">
-                  <!-- <input id="break-four" type="text" name="b-type-small" -->
+                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                    <title>laptop-icon</title>
+                    <g>
+                      <path fill="#222" d="M37.535,13.4V26.184h-25.2V13.4h25.2m2.88-5.12H9.458a2.24,2.24,0,0,0-2.24,2.24V31.3H42.655V10.521a2.24,2.24,0,0,0-2.24-2.24Z"/>
+                      <path d="M38.762,31.472l1.615,4.135L9.505,35.472l1.443-3.92,27.814-.08m3.492-5.13-34.88.1L3.1,38.047a1.8,1.8,0,0,0,1.646,2.524l40.491.177h.008a1.8,1.8,0,0,0,1.638-2.558l-4.63-11.848Z"/>
+                    </g>
+                  </svg>
+
+                  <input id="break-four" type="text" name="b-type-small" value="x">
+                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                    <title>desktop-icon</title>
+                    <path fill="#222" d="M43.327,10.529H6.673a1.926,1.926,0,0,0-1.927,1.927V33.7a1.927,1.927,0,0,0,1.927,1.927h12c0,.04-.006.08,0,.121.087,1.057-.121,3.523-1.305,3.956a2.3,2.3,0,0,0,.791,4.467H31.847A2.3,2.3,0,0,0,33.04,39.9c-1.415-.857-1.706-3.4-1.7-4.27H43.327A1.927,1.927,0,0,0,45.254,33.7V12.456A1.926,1.926,0,0,0,43.327,10.529ZM27.383,39.562h-4.55a11.559,11.559,0,0,0,.443-3.937h3.457A12.473,12.473,0,0,0,27.383,39.562Zm12.751-9.057H9.866V15.649H40.134Z"/>
+                  </svg>
 
                </div>
             </div>
