--- a/index.html
+++ b/index.html
@@ -75,37 +75,61 @@
             <div class="cp-form-block">
                <hr class="cp-hr">
                <h4 class="break-title">Break points</h4>
+
                <div class="cp-break-wrapper">
 
-                  <!-- inputs -->
-                  <input id="break-one" type="text" name="b-type-small" value="x">
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>phone-icon</title>
-                    <path fill="#222" d="M33.32,11.08V38.92H16.68V11.08H33.32m0-5.12H16.68a5.12,5.12,0,0,0-5.12,5.12V38.92a5.12,5.12,0,0,0,5.12,5.12H33.32a5.12,5.12,0,0,0,5.12-5.12V11.08a5.12,5.12,0,0,0-5.12-5.12Z"/>
+                    <path d="M30.835,9.329a.755.755,0,0,1,.754.754V39.708a.755.755,0,0,1-.754.755H19.165a.755.755,0,0,1-.754-.755V10.083a.755.755,0,0,1,.754-.754h11.67m0-4H19.165a4.753,4.753,0,0,0-4.754,4.754V39.708a4.754,4.754,0,0,0,4.754,4.755h11.67a4.754,4.754,0,0,0,4.754-4.755V10.083a4.753,4.753,0,0,0-4.754-4.754Z"/>
+                  </svg>
+
+
+                  <input id="break-one" type="text" name="b-type-small" value="x">
+
+                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                    <title>tablet-icon</title>
+                    <path d="M35.751,9.329V40.671H14.084V9.329H35.751m.122-4H13.962a3.878,3.878,0,0,0-3.878,3.878V40.793a3.878,3.878,0,0,0,3.878,3.878H35.873a3.878,3.878,0,0,0,3.878-3.878V9.207a3.878,3.878,0,0,0-3.878-3.878Z"/>
                   </svg>
 
                   <input id="break-two" type="text" name="b-type-small" value="x">
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>tablet-icon</title>
-                    <path fill="#222" d="M33.32,11.08V38.92H16.68V11.08H33.32m0-5.12H16.68a5.12,5.12,0,0,0-5.12,5.12V38.92a5.12,5.12,0,0,0,5.12,5.12H33.32a5.12,5.12,0,0,0,5.12-5.12V11.08a5.12,5.12,0,0,0-5.12-5.12Z"/>
-                  </svg>
 
-                  <input id="break-three" type="text" name="b-type-small" value="x">
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>laptop-icon</title>
                     <g>
-                      <path fill="#222" d="M37.535,13.4V26.184h-25.2V13.4h25.2m2.88-5.12H9.458a2.24,2.24,0,0,0-2.24,2.24V31.3H42.655V10.521a2.24,2.24,0,0,0-2.24-2.24Z"/>
-                      <path d="M38.762,31.472l1.615,4.135L9.505,35.472l1.443-3.92,27.814-.08m3.492-5.13-34.88.1L3.1,38.047a1.8,1.8,0,0,0,1.646,2.524l40.491.177h.008a1.8,1.8,0,0,0,1.638-2.558l-4.63-11.848Z"/>
+                      <path d="M39.043,13.4V28.821H10.835V13.4H39.043m1.848-4H8.987a2.152,2.152,0,0,0-2.152,2.153V32.821H43.043V11.552A2.152,2.152,0,0,0,40.891,9.4Z"/>
+                      <path d="M40.1,32.485l1.888,4.1L7.92,36.444l1.689-3.876,30.49-.083m2.559-4.007-35.674.1-4.106,9.43A1.733,1.733,0,0,0,4.46,40.43l41.065.171h.008a1.734,1.734,0,0,0,1.574-2.459l-4.449-9.664Z"/>
                     </g>
                   </svg>
 
-                  <input id="break-four" type="text" name="b-type-small" value="x">
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
-                    <title>desktop-icon</title>
-                    <path fill="#222" d="M43.327,10.529H6.673a1.926,1.926,0,0,0-1.927,1.927V33.7a1.927,1.927,0,0,0,1.927,1.927h12c0,.04-.006.08,0,.121.087,1.057-.121,3.523-1.305,3.956a2.3,2.3,0,0,0,.791,4.467H31.847A2.3,2.3,0,0,0,33.04,39.9c-1.415-.857-1.706-3.4-1.7-4.27H43.327A1.927,1.927,0,0,0,45.254,33.7V12.456A1.926,1.926,0,0,0,43.327,10.529ZM27.383,39.562h-4.55a11.559,11.559,0,0,0,.443-3.937h3.457A12.473,12.473,0,0,0,27.383,39.562Zm12.751-9.057H9.866V15.649H40.134Z"/>
-                  </svg>
 
                </div>
+
+               <div class="cp-break-wrapper">
+
+                  <input class="space-left" id="break-three" type="text" name="b-type-small" value="x">
+
+                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                    <title>desktop-icon</title>
+                    <g>
+                      <path d="M42.877,13.394V31.815H7.123V13.394H42.877M44.828,9.5H5.172a1.944,1.944,0,0,0-1.944,1.944V33.766A1.944,1.944,0,0,0,5.172,35.71H44.828a1.944,1.944,0,0,0,1.944-1.944V11.443A1.944,1.944,0,0,0,44.828,9.5Z"/>
+                      <path d="M27.4,34.571s.916,4.579,4.269,5.93H18.336c3.353-1.351,4.269-5.93,4.269-5.93" fill="none" stroke="#000" stroke-linejoin="round" stroke-width="4"/>
+                    </g>
+                  </svg>
+
+
+                  <input id="break-four" type="text" name="b-type-small" value="1680">
+
+                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                    <title>tv-icon</title>
+                    <g>
+                      <path d="M44.6,15.684v17.18H5.4V15.684H44.6m1.6-3.638H3.8a2.037,2.037,0,0,0-2.037,2.037V34.464A2.037,2.037,0,0,0,3.8,36.5H46.2a2.037,2.037,0,0,0,2.037-2.037V14.083A2.037,2.037,0,0,0,46.2,12.046Z"/>
+                      <line x1="20.994" y1="37.954" x2="29.006" y2="37.954" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3.517"/>
+                    </g>
+                  </svg>
+
+
+               </div>
+
             </div>
 
             <!-- Functionality -->
