padding now adjusts according to break points

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                <div class="cp-break-wrapper">
 
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                  <svg id="break-icon-phone" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>phone-icon</title>
                     <path d="M30.835,9.329a.755.755,0,0,1,.754.754V39.708a.755.755,0,0,1-.754.755H19.165a.755.755,0,0,1-.754-.755V10.083a.755.755,0,0,1,.754-.754h11.67m0-4H19.165a4.753,4.753,0,0,0-4.754,4.754V39.708a4.754,4.754,0,0,0,4.754,4.755h11.67a4.754,4.754,0,0,0,4.754-4.755V10.083a4.753,4.753,0,0,0-4.754-4.754Z"/>
                   </svg>
@@ -86,14 +86,14 @@
 
                   <input id="break-one" type="text" name="b-type-small" value="x">
 
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                  <svg id="break-icon-tablet" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>tablet-icon</title>
                     <path d="M35.751,9.329V40.671H14.084V9.329H35.751m.122-4H13.962a3.878,3.878,0,0,0-3.878,3.878V40.793a3.878,3.878,0,0,0,3.878,3.878H35.873a3.878,3.878,0,0,0,3.878-3.878V9.207a3.878,3.878,0,0,0-3.878-3.878Z"/>
                   </svg>
 
                   <input id="break-two" type="text" name="b-type-small" value="x">
 
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                  <svg id="break-icon-laptop" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>laptop-icon</title>
                     <g>
                       <path d="M39.043,13.4V28.821H10.835V13.4H39.043m1.848-4H8.987a2.152,2.152,0,0,0-2.152,2.153V32.821H43.043V11.552A2.152,2.152,0,0,0,40.891,9.4Z"/>
@@ -108,7 +108,7 @@
 
                   <input class="space-left" id="break-three" type="text" name="b-type-small" value="x">
 
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                  <svg id="break-icon-desktop" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>desktop-icon</title>
                     <g>
                       <path d="M42.877,13.394V31.815H7.123V13.394H42.877M44.828,9.5H5.172a1.944,1.944,0,0,0-1.944,1.944V33.766A1.944,1.944,0,0,0,5.172,35.71H44.828a1.944,1.944,0,0,0,1.944-1.944V11.443A1.944,1.944,0,0,0,44.828,9.5Z"/>
@@ -117,7 +117,7 @@
                   </svg>
 
 
-                  <input id="break-four" type="text" name="b-type-small" value="1680">
+                  <input id="break-icon-tv" type="text" name="b-type-small" value="1680">
 
                   <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>tv-icon</title>
