building break functionality

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
    <!-- Break points -->
    <div id="break-bg">
-      <div id="break-mark-1"></div>
-      <div id="break-mark-2"></div>
-      <div id="break-mark-3"></div>
-      <div id="break-mark-4"></div>
+      <div id="break-line-1"></div>
+      <div id="break-line-2"></div>
+      <div id="break-line-3"></div>
+      <div id="break-line-4"></div>
    </div>
 
 
