break point lines work!!!!

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                   </svg>
 
 
-                  <input id="break-icon-tv" type="text" name="b-type-small" value="1680">
+                  <input id="break-four" type="text" name="b-type-small" value="x">
 
-                  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                  <svg id="break-icon-tv" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <title>tv-icon</title>
                     <g>
                       <path d="M44.6,15.684v17.18H5.4V15.684H44.6m1.6-3.638H3.8a2.037,2.037,0,0,0-2.037,2.037V34.464A2.037,2.037,0,0,0,3.8,36.5H46.2a2.037,2.037,0,0,0,2.037-2.037V14.083A2.037,2.037,0,0,0,46.2,12.046Z"/>
