--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
 <!-- Break points -->
 <div id="break-bg">
-   <div id="break-line-1"></div>
+   <div id="break-line-1">
+      <p>&#8212; break 1</p>
+   </div>
    <div id="break-line-2"></div>
    <div id="break-line-3"></div>
    <div id="break-line-4"></div>
